--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@fontsource/roboto": "^5.0.13",
         "@mui/icons-material": "^5.16.4",
         "@mui/material": "^5.16.4",
+        "@mui/x-charts": "^7.11.0",
         "@mui/x-date-pickers": "^7.11.0",
         "dayjs": "^1.11.12",
         "next": "14.2.5",
