--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
         "@mui/x-charts": "^7.11.0",
         "@mui/x-date-pickers": "^7.11.0",
         "dayjs": "^1.11.12",
+        "formik": "^2.4.6",
         "next": "14.2.5",
         "react": "^18",
         "react-dom": "^18",
-        "uuid": "^10.0.0"
+        "uuid": "^10.0.0",
+        "yup": "^1.4.0"
     },
     "devDependencies": {
         "@types/node": "^20",
